attempt to fix blur issue on small screens

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -131,6 +131,6 @@ ul{
     }
 
     .header{
-        max-height: 100px;
+        max-height: 85px !important;
     }
 }
